--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/web-build.loader.js";
       var config = {
-        dataUrl: buildUrl + "/web-build.data",
+      dataUrl:
+          "https://media.githubusercontent.com/media/pennane/invade-pluto/main/Build/" +
+          "/web-build.data",
         frameworkUrl: buildUrl + "/web-build.framework.js",
         codeUrl: buildUrl + "/web-build.wasm",
         streamingAssetsUrl: "StreamingAssets",
